--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,23 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Toto App</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['/new-todo']">
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-list>
+      <ion-item detail="false" *ngFor="let todo of todos; let i = index;">
+        <ion-label>
+          {{ todo.title }}
+        </ion-label>
+        <ion-checkbox [(ngModel)]="todo.completed"></ion-checkbox>
+      </ion-item>
+    </ion-list>
   </div>
 </ion-content>
